Langkah 1.2 Trial and Error Mencari Design

--- a/home.html
+++ b/home.html
@@ -1,12 +1,56 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samsung</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+    <header>
+        <div style="text-align: center; background-color: rgb(3, 3, 75);">
+            <img src="assets/samsung-logo.png" alt="Logo" width="200" height="150">
+        </div>
+        <h1 class="name">SAMSUNG</h1>
+        <p> Check out our Samsung Galaxy Z Fold 5</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="phone">Check out the phone</a></li>
+            <li><a href="camera">Check out the camera</a></li>
+            <li><a href="variety">Check out the variety</a></li>
+
+        </ul>
+    </nav>
+
+    <section id="phone">
+        <h2>Samsung Galaxy Z Fold 5</h2>
+        <p></p>
+        <!--isi deskripsi hp disini-->
+    </section>
+    <section id="camera">
+        <h2>Beauty of Pictures captured by Samsung Galaxy Z Fold 5</h2>
+        <!--isi detail nanti-->
+
+    </section>
+    <section id="variety">
+        <h2>Varieties of Samsung Galaxy Z Fold 5</h2>
+        <!--isi nanti-->
+    </section>
+
+    <footer>
+        <p>Details Here</p>
+        <a href="phone.html">Here</a>
+        
+        <p>Keep Up with Us on Our Social Media</p>
+
+
+        <p>Want to know more about us?</p>
+        <a href="about.html">Click here</a>
+    </footer>
+
 
 </body>
 
