--- a/phone.html
+++ b/phone.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samsung Galaxy Z Fold 5</title>
+    <link rel="stylesheet" href="assets/style2.css">
 </head>
 <body>
     <header>
