Langkah 1.3 Tambah prototype text buat diisi nanti

--- a/about.html
+++ b/about.html
@@ -5,15 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informasi Samsung</title>
+    <link rel="stylesheet" href="assets/style3.css">
 </head>
 <body>
     <header>
-
-
-
-        
+        <h1>This is Our Mission and Culture</h1>
+        <p>Samsung is commited to abide by rules and regulations assigned to its area and applies strict code of conduct to its employees. We believe that ethics are one of the important thing needed to respond to rapid changes of business environment, but also a methods to tighten trust and relationship with its stakeholders including customers, employees, business partner, and shareholders.</p>
     </header>
+    <nav>
+        <h3>Here is our:</h3>
+        <ul>
+            <li><a href="mission">Mission and Approach</a></li>
+            <li><a href="values">Values that are the spirit of Samsung</a></li>
+            <li><a href="principles">Samsung's five business principles</a></li>
+        </ul>
 
+    </nav>
+    <section id="mission">
+        <h2>Our mission and approach</h2>
+        <!--isi nanti-->
+    </section>
+    
+    <section id="values">
+        <h2>The Values that are the spirit of Samsung</h2>
+        <!--isi nanti-->
+    </section>
+
+    <section id="principles">
+        <h2>Samsung's five business principles</h2>
+        <!--isi nanti-->
+
+    </section>
 
     <footer>
         <p>Want to go back?</p>
