--- a/home.html
+++ b/home.html
@@ -9,12 +9,17 @@
 </head>
 <body>
     <header>
-        <div style="text-align: center; background-color: rgb(3, 3, 75);">
+        <div style="text-align: center; background-color: rgb(3, 3, 75);;">
             <img src="assets/samsung-logo.png" alt="Logo" width="200" height="150">
         </div>
         <h1 class="name">SAMSUNG</h1>
         <p> Check out our Samsung Galaxy Z Fold 5</p>
     </header>
+
+    <div style="width: 400 px; height: 400px; position: static; float: inline-end; flex-wrap: wrap;">
+        <img src="assets/Phone.jpg" alt="zfold5" width="400px; height 400px;">
+    </div>
+
 
     <nav>
         <ul>
@@ -27,11 +32,13 @@
 
     <section id="phone">
         <h2>Samsung Galaxy Z Fold 5</h2>
-        <p></p>
+        <p>Samsung Galaxy Series Z Fold 5 is the newest edition edition of the Galaxy Z series now available for purchase</p>
+        
         <!--isi deskripsi hp disini-->
     </section>
     <section id="camera">
         <h2>Beauty of Pictures captured by Samsung Galaxy Z Fold 5</h2>
+        <p>Here is the magic caught by Galaxy Z Fold 5</p>
         <!--isi detail nanti-->
 
     </section>
@@ -39,6 +46,7 @@
         <h2>Varieties of Samsung Galaxy Z Fold 5</h2>
         <!--isi nanti-->
     </section>
+    
 
     <footer>
         <p>Details Here</p>
@@ -47,6 +55,7 @@
         <p>Keep Up with Us on Our Social Media</p>
 
 
+        <hr>
         <p>Want to know more about us?</p>
         <a href="about.html">Click here</a>
     </footer>
