Langkah 1.4 Edit typo dan menambah asset baru

--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
         <p> Check out our Samsung Galaxy Z Fold 5</p>
     </header>
 
-    <div style="width: 400 px; height: 400px; position: static; float: inline-end; flex-wrap: wrap;">
-        <img src="assets/Phone.jpg" alt="zfold5" width="400px; height 400px;">
+    <div style="width: 40% px; height: 80%; position: static; float: right; flex-wrap: wrap;">
+        <img src="assets/Phone.jpg" alt="zfold5" width="400px; height 500px;">
     </div>
 
 
@@ -33,7 +33,8 @@
     <section id="phone">
         <h2>Samsung Galaxy Z Fold 5</h2>
         <p>Samsung Galaxy Series Z Fold 5 is the newest edition edition of the Galaxy Z series now available for purchase</p>
-        
+        <img src="assets/z-fold-5.jpg" alt="zfold5-stand" width="700px;" height="300px;>
+
         <!--isi deskripsi hp disini-->
     </section>
     <section id="camera">
@@ -44,6 +45,7 @@
     </section>
     <section id="variety">
         <h2>Varieties of Samsung Galaxy Z Fold 5</h2>
+        <p>Z Fold 5 have three colors available for you to pick from</p>
         <!--isi nanti-->
     </section>
     
