--- a/phone.html
+++ b/phone.html
@@ -13,7 +13,7 @@
             <source src="assets/z-fold-highlights.mp4" type="video/mp4">
         </video>
 
-        <h1>Samsung Galacy Z Fold 5</h1>
+        <h1>Samsung Galaxy Z Fold 5</h1>
         <p> The Performance of a PC now portable in your pocket</p>
         <p>We greet you with our large screen smartphone that can become a game console and reliable multitasking tool.</p>
         <p>Attached with professional grade camera that can be folded neatly in your hand</p>
@@ -47,7 +47,12 @@
     <footer>
         <p>Want to go back?</p>
         <a href="home.html">Click here</a>
+        
     </footer>
+
+    <video width="100%"; height="200" controls autoplay muted preload="auto" loop>
+        <source src="assets/z-fold-camera.mp4" type="video/mp4">
+    </video>
 
 
 </body>
