Langkah 1.5 Ganti style css dikit

--- a/home.html
+++ b/home.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samsung</title>
     <link rel="stylesheet" href="assets/style.css">
+    
 </head>
 <body>
     <header>
         <div style="text-align: center; background-color: rgb(3, 3, 75);;">
-            <img src="assets/samsung-logo.png" alt="Logo" width="200" height="150">
+            <img src="assets/samsung-logo.png" alt="Logo" width="300" height="250" style="text-align: end;">
         </div>
         <h1 class="name">SAMSUNG</h1>
         <p> Check out our Samsung Galaxy Z Fold 5</p>
@@ -32,20 +33,31 @@
 
     <section id="phone">
         <h2>Samsung Galaxy Z Fold 5</h2>
-        <p>Samsung Galaxy Series Z Fold 5 is the newest edition edition of the Galaxy Z series now available for purchase</p>
+        <h3>Samsung Galaxy Series Z Fold 5 is the newest edition edition of the Galaxy Z series now available for purchase</h3>
         <img src="assets/z-fold-5.jpg" alt="zfold5-stand" width="700px;" height="300px;>
 
         <!--isi deskripsi hp disini-->
     </section>
     <section id="camera">
         <h2>Beauty of Pictures captured by Samsung Galaxy Z Fold 5</h2>
-        <p>Here is the magic caught by Galaxy Z Fold 5</p>
+        <h3>Here is the magic caught by Galaxy Z Fold 5</h3>
+        <img src="assets/Foto1.jpg" alt="foto1" style="text-align: end;display: inline;" width="250px" height="250px">
+        <img src="assets/Foto2.jpg" alt="foto2" style="text-align: end;display: inline;" width="250px" height="250px">
+        <img src="assets/Foto3.jpg" alt="foto3" style="text-align: end;display: inline;" width="250px" height="250px">
+        <img src="assets/Foto4.jpg" alt="foto4" style="text-align: end;display: inline;" width="250px" height="250px">
+        <img src="assets/Foto5.jpg" alt="foto5" style="text-align: end;;display: inline;" width="250px" height="250px">
+        <img src="assets/Foto6.jpg" alt="foto6" style="text-align: end;display: inline-block;" width="250px" height="250px"> 
+        <p style="float: left;">Z Fold 5 high tech camera allows the user to adjust many settings to achieve the ultimate picture.
+        It comes with multiple features such as Selfie, Color tone adjustment, High Qualities, Zoom 10x, Quick view on the cover screen,
+        Handsfree through flexcam feature, etc. Z Fold 5 is equipped with Ultra Wide Lens spanning 12 MP and 50 MP Wide Lens
+        that allows user to take sharp and clear pictures from multiple angles. 
+        </p> 
         <!--isi detail nanti-->
 
     </section>
     <section id="variety">
         <h2>Varieties of Samsung Galaxy Z Fold 5</h2>
-        <p>Z Fold 5 have three colors available for you to pick from</p>
+        <h3>Z Fold 5 have three colors available for you to pick from</h3>
         <!--isi nanti-->
     </section>
     
@@ -60,6 +72,9 @@
         <hr>
         <p>Want to know more about us?</p>
         <a href="about.html">Click here</a>
+
+        <h3>Assets and product belongs to Samsung, i do not claim rights to Samsung Galaxy Z Fold 5 as my own.</h3>
+        <h4>This is a school project</h4>
     </footer>
 
 
