Langkah 2  Menyelesaikan bagian phone

--- a/home.html
+++ b/home.html
@@ -34,19 +34,22 @@
     <section id="phone">
         <h2>Samsung Galaxy Z Fold 5</h2>
         <h3>Samsung Galaxy Series Z Fold 5 is the newest edition edition of the Galaxy Z series now available for purchase</h3>
-        <img src="assets/z-fold-5.jpg" alt="zfold5-stand" width="700px;" height="300px;>
-
-        <!--isi deskripsi hp disini-->
+        <img src="assets/z-fold-5.jpg" alt="zfold5-stand" width="700px;" height="300px;>    
     </section>
+
+
+
     <section id="camera">
         <h2>Beauty of Pictures captured by Samsung Galaxy Z Fold 5</h2>
         <h3>Here is the magic caught by Galaxy Z Fold 5</h3>
-        <img src="assets/Foto1.jpg" alt="foto1" style="text-align: end;display: inline;" width="250px" height="250px">
-        <img src="assets/Foto2.jpg" alt="foto2" style="text-align: end;display: inline;" width="250px" height="250px">
-        <img src="assets/Foto3.jpg" alt="foto3" style="text-align: end;display: inline;" width="250px" height="250px">
-        <img src="assets/Foto4.jpg" alt="foto4" style="text-align: end;display: inline;" width="250px" height="250px">
-        <img src="assets/Foto5.jpg" alt="foto5" style="text-align: end;;display: inline;" width="250px" height="250px">
-        <img src="assets/Foto6.jpg" alt="foto6" style="text-align: end;display: inline-block;" width="250px" height="250px"> 
+        <div class="container">
+            <img src="assets/Foto1.jpg" alt="foto1" width="250px" height="250px" class="item">
+            <img src="assets/Foto2.jpg" alt="foto2" width="250px" height="250px" class="item">
+            <img src="assets/Foto3.jpg" alt="foto3" width="250px" height="250px" class="item">
+            <img src="assets/Foto4.jpg" alt="foto4" width="250px" height="250px" class="item">
+            <img src="assets/Foto5.jpg" alt="foto5" width="250px" height="250px" class="item">
+            <img src="assets/Foto6.jpg" alt="foto6" width="250px" height="250px" class="item"> 
+        </div>
         <p style="float: left;">Z Fold 5 high tech camera allows the user to adjust many settings to achieve the ultimate picture.
         It comes with multiple features such as Selfie, Color tone adjustment, High Qualities, Zoom 10x, Quick view on the cover screen,
         Handsfree through flexcam feature, etc. Z Fold 5 is equipped with Ultra Wide Lens spanning 12 MP and 50 MP Wide Lens
