--- a/phone.html
+++ b/phone.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header style="text-align: center;">
-        <video width="100%" height="360" controls autoplay muted preload="auto">
+        <video width="100%" height="360" loop autoplay muted preload="auto">
             <source src="assets/z-fold-highlights.mp4" type="video/mp4">
         </video>
 
@@ -30,7 +30,7 @@
 
     <section id="design" style="text-align: center;">
         <h2>The Best 7.6" Main Screen</h2>
-        <video width="100%" height="360" controls autoplay muted preload="auto">
+        <video width="100%" height="360" loop autoplay muted preload="auto">
             <source src="assets/z-fold-showcase.mp4" type="video/mp4">
         </video>
         <p>An impressive screen reimagined to bring the best gaming experience like never before. Cinematic viewing whenever and whereever you are all on a tablet sized device.</p>
@@ -66,7 +66,7 @@
         
     </footer>
 
-    <video width="100%"; height="200" controls autoplay muted preload="auto" loop>
+    <video width="100%"; height="200" autoplay muted preload="auto" loop>
         <source src="assets/z-fold-camera.mp4" type="video/mp4">
     </video>
 
